# lm_forge

./: .gitignore  DEVELOPER.md  README.md  main.py  pyproject.toml  requirements.txt  run_modal.py  setup.py  test_alibi.py  test_fast_tokenizer.py  test_np.py
configs/accelerate/: fsdp.yaml
engine/: __init__.py
engine/components/: __init__.py
engine/components/attention/: __init__.py  gqa.py  mha.py  sliding.py
engine/components/ffn/: __init__.py  classic.py  swiglu.py
engine/components/norm/: __init__.py  norms.py
engine/components/positional/: __init__.py  alibi.py  learned.py  nope.py  rope.py
engine/config/: __init__.py  hf_config.py  schema.py
engine/data/: __init__.py  collators.py  hf_utils.py  hub_prepare.py  streaming.py
engine/eval/: metrics.py
engine/legacy/data/: __init__.py  memmap.py  packed.py  pretokenize.py
engine/legacy/training/: __init__.py  device.py  hub.py  schedulers.py  trainer.py
engine/legacy/utils/: __init__.py  ablation.py
engine/models/: __init__.py  base.py  decoder.py  encoder.py  hf_model.py
engine/tokenizer/: __init__.py  bpe.py  hf_tokenizer.py
engine/utils/: __init__.py  hf_callbacks.py  hub_checkpoint_utils.py  model_card.py  profiler.py
examples/minimal_train/: README.md  train.py
experiments/ablation_001/: ablation.yaml  run_ablation.py
experiments/exp_001_gqa_rope/: config.yaml  train.py
experiments/hf_native_example/: config.yaml  train.py
experiments/powershell_gen/: config.yaml  train.py
experiments/pretrain_base/: README.md  colab_train.ipynb  config_phase1.yaml  config_phase2.yaml  data_streaming.py  train.py
forge/: __init__.py  cli.py  config.py
forge/data/: streaming.py
forge/integration/: dash.py  hf.py  prober.py  profiler.py  watchdog.py
forge/providers/: modal_provider.py
forge/state/: hub_manager.py
notebooks/: colab_session.ipynb
scripts/: test_save_tokenizer.py  verify_hf_native.py
tests/: conftest.py  test_causality.py  test_components.py  test_config_safety.py  test_data_and_utils.py  test_data_pipeline.py  test_forge_config.py  test_forge_resumption.py  test_models.py  test_optimizations.py
