[project]
name = "lm-forge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub[cli]>=0.20.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "transformers>=5.0.0",
    "wandb>=0.15.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.19.0",
]
