[project]
name = "lm-forge"
version = "0.1.0"
description = "Modular SLM training engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub[cli]>=0.20.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "wandb>=0.15.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.19.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["engine", "engine.components", "engine.config", "engine.data", "engine.models", "engine.tokenizer", "experiments"]
