[project]
name = "lm-forge"
version = "0.2.0"
description = "Nomad Training utility for seamless model training across providers"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "datasets>=2.18.0",
    "huggingface-hub[cli]>=0.20.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "modal>=0.60.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {include = ["forge*"]}}

[project.scripts]
forge = "forge.cli:app"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
